objects/enxootr__Test_Suite__c.object
<CustomObject>
    <fields>
        <fullName>enxootr__ExternalId__c</fullName>
        <description>Concatenation of organization id and test suite id</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenation of organization id and test suite id</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enxootr__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>enxootr__Organization__c</referenceTo>
        <relationshipLabel>Test Suites</relationshipLabel>
        <relationshipName>Test_Suites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>enxootr__Remote_Id__c</fullName>
        <label>Remote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Test Suite</label>
    <nameField>
        <label>Test Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Suites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>